# tweet-crawler

./: .gitignore  README.md  pyproject.toml
src/tweet_crawler/: __init__.py  crawler.py  exception.py  model.py  parse.py
src/tweet_crawler/crawler/: __init__.py  _base.py  followers.py  following.py  status.py
tests/: __init__.py  crawler.py  followers.py  following.py  followings.py  status.py  util.py
