[project]
name = "tweet-crawler"
version = "0.1.0"
description = "Python tool using Playwright to intercept Twitter responses and parse tweets."
authors = [
    {name = "nullqwertyuiop", email = "null@member.fsf.org"},
]
dependencies = [
    "playwright>=1.47.0",
    "pydantic>=2.9.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true
